--- a/RecruitConnect/src/components/Employerlogin.css
+++ b/RecruitConnect/src/components/Employerlogin.css
@@ -39,7 +39,7 @@
   font-size: 16px;
   font-family: Arial, sans-serif;
   color: #d7d5e2;
-  background-color:  #5c5b555e;
+  background-color: #5c5b555e;
   border: none;
   border-radius: 4px;
   cursor: pointer;
@@ -48,6 +48,29 @@
 
 .employer-login-button:hover {
   background-color: #542ce6;
+}
+
+/* Styles for the form switch text and button */
+.employer-switch-form {
+  margin-top: 20px;
+  font-family: Arial, sans-serif;
+  color: #d7d5e2;
+  display: flex;
+  align-items: center;
+  font-size: 16px;
+}
+
+.employer-switch-form button {
+  background: none;
+  border: none;
+  color: #0ef106;
+  cursor: pointer;
+  margin-left: 5px;
+  font-size: 16px;
+}
+
+.employer-switch-form button:hover {
+  text-decoration: underline;
 }
 
 .employer-error-message {
@@ -62,8 +85,12 @@
   }
 
   .employer-login-input, .employer-login-button {
-      color: #ffffff;
-      background-color: #333;
-      border-color: #444;
+    color: #ffffff;
+    background-color: #333;
+    border-color: #444;
+  }
+
+  .employer-switch-form {
+    font-size: 14px;
   }
 }
