--- a/RecruitConnect/src/seekercomponents/seeker.css
+++ b/RecruitConnect/src/seekercomponents/seeker.css
@@ -7,11 +7,11 @@
   background-color: #0323696b;
   padding: 24px;
   border-radius: 9px; 
-  width: 200px; /* Fixed width for the navbar */
+  width: 200px; 
   margin-right: 20px;
-  flex-shrink: 0; /* Prevent shrinking */
-  position: sticky; /* Sticky positioning */
-  top: 40px; /* Adjust as needed */
+  flex-shrink: 0; 
+  position: sticky; 
+  top: 40px; 
 }
 
 .jobseeker-content {
@@ -29,7 +29,7 @@
 }
 
 .jobseeker-nav-item {
-  margin-bottom: 20px; /* Add space between items */
+  margin-bottom: 20px; 
 }
 
 .jobseeker-nav-button {
@@ -44,7 +44,7 @@
 
 .jobseeker-nav-button:hover {
   background-color: grey;
-  transform: scale(1.05); /* Add scale effect on hover */
+  transform: scale(1.05);
 }
 
 @media (max-width: 768px) {
